// Copyright (C) 2018 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package emulator_location;

// Protobuf definition of the metadata for
// a route (path) of Location data.
//
// The actual points that define the route
// are in a 'route.json' file in the same
// directory as the .pb file.

message RouteMetadata {
  // Name that the user gave this route
  required string logical_name = 1;

  // Creation time
  required int64 creation_time = 2;

  // Descriptive string given by the user
  optional string description = 3;

  // Mode of travel
  enum Mode {
    DRIVING = 0;
    WALKING = 1;
    BICYCLING = 2;
    TRANSIT = 3;
  }
  optional Mode mode_of_travel = 4;

  // Duration of the route (the time taken at 1x, in seconds)
  optional int64 duration = 5;

  // Number of lat/lng pairs in the route
  optional int64 number_of_points = 6;

  // The format of the route json.
  enum JsonFormat {
      GOOGLEMAPS = 0;
      GPXKML = 1;
  }
  required bool json_format = 7;
}
